# testTask

./: CMakeLists.txt  README.md
engine/include/: BulletManager.h  DirectxRenderer.h  Shaders.h  Utils.h  Window.h  d3dx12.h
engine/src/: BulletManager.cpp  DirectxRenderer.cpp  Main.cpp  Utils.cpp  Window.cpp
